# needle

./: .deployed-at  .gitattributes  .gitignore  Cargo.toml  MANIFEST.in  NEEDLE-1.0-CONFORMANCE-AUDIT.md  NEEDLE-1.0-ISSUE-MAP.md  NEEDLE-1.0-PRD.md  NEEDLE-1.0-WORK-QUEUE.md  README.md  TESTER-HANDOFF.md  TESTING.md  index.html  install.sh  package.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: pages.yml  pr-checks.yml
adapters/claude/: STATUSLINE.md  state.py
adapters/pi/: README.md  client.mjs  demo-canary.mjs  extension.js  extension.mjs
archive/claude/: README.md
backends/: HTTP-CONTRACT.md
backends/e24z/: code-pruner-http.yaml  code-pruner-mlx.yaml
benchmarks/: README.md  __init__.py  apple-core-ai-backend-notes.md  dashboard.py  monitor.sh  watch.py
benchmarks/results/: README.md
benchmarks/slices/: lite-test-django3-a.json  lite-test-mixed12-a.json
benchmarks/swebench/: __init__.py  hay_environment.py  run.py  vibeproxy.yaml
bindings/pi/: native-tools.yaml
capabilities/e24z/: soft-lamr.yaml
claims/: pi-local-mac-soft-lamr.yaml
crates/needle-manager/: Cargo.toml
docs/: READING-MAP.md
docs/getting-started/: CLAUDE-CODE-MCP.md  DOGFOODING.md
docs/internal/: READING-MAP.md  README.md
docs/planning/: NEEDLE-1.0-CONFORMANCE-AUDIT.md  NEEDLE-1.0-ISSUE-MAP.md  NEEDLE-1.0-PRD.md  NEEDLE-1.0-WORK-QUEUE.md  TESTER-HANDOFF.md
docs/reference/: ADAPTER_PARITY.md  DISTRIBUTION.md  HTTP-BACKEND-CONTRACT.md  MLX-PERF-TESTING.md  PI-ADAPTER.md
examples/: README.md
examples/fixtures/: batch_guardrail.py  chunked_statusline.py  noisy_sentinel.txt
examples/traces/: README.md  pi-sessions.jsonl
hooks/: __init__.py  extractors.py  post_tool_use.py
monitors/: README.md  monitors.json
needle/: cli.py  registry.py
needle/backends/: debug.py
needle/hosts/: __init__.py
pi/: appearance.js  client.mjs  commands.js  config.js  daemon.js  extension.js  package-lock.json  package.json  pi-tools.js  state.js  status-modes.js  statusline.js  tool-overrides.js
pruner/: __init__.py  cli.py  client.py  events.py  manager.py  naming.py  package_config.py  protocol.py  server.py  session.py  state.py  sysmem.py
python/: pyproject.toml
python/needle_worker/: __init__.py  __main__.py  model_download.py  model_download_cli.py  paths.py  worker.py
python/needle_worker/soft_lamr/: __init__.py  backbone.py  config.py  decision.py  model.py
python/needle_worker/soft_lamr/repair/: __init__.py  python.py
scripts/: generate-pi-session-traces.mjs  package-release.sh
site/: index.html  install.sh
src/needle/: cli.py  (+4 more)
statusline/: README.md  statusline.py
tests/: conftest.py  smoke_installed_artifact.py  test_backends.py  test_benchmark_modal_environment.py  test_benchmark_validation.py  test_cli.py  test_code_pruner_backbone.py  test_code_pruner_batching.py  test_code_pruner_chunking.py  test_code_pruner_profiling.py  test_events.py  test_example_traces.py  test_extractors.py  test_hook.py  test_manager.py  test_mcp_bash.py  test_memory.py  test_mlx_backend_probe.py  test_model_download.py  test_package_config.py  test_paths.py  test_pi_client.mjs  test_pi_client_daemon.mjs  test_pi_extension.mjs  test_repair.py  test_roundtrip.py  test_runtime_namespace.py  test_session.py  test_status.py  test_statusline.py  test_version.py  test_worker.py
tools/: mlx_backend_probe.py  mlx_padding_probe.py
(+160 files in other folders)
