[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# uv-native provisioning. Backend manifests declare which extra launches their
# runtime. The public `needle` control plane stays lightweight enough to install
# without MLX.
[project]
name = "needle"
version = "0.1.0"
description = "Local context-pruning for agent coding tools."
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12,<1",
]

[project.optional-dependencies]
backend-code-pruner-mlx = [
    "mlx",
    "mlx-lm",
    "numpy",
    "huggingface-hub",
    "transformers",
]

[project.scripts]
needle = "needle.cli:main"

[tool.setuptools.packages.find]
include = ["needle*", "pruner*"]
