[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

# uv-native provisioning. Backend manifests declare which extra launches their
# runtime. The public `needle` control plane stays lightweight enough to install
# without MLX.
[project]
name = "needle"
version = "0.1.0"
description = "Local context-pruning for agent coding tools."
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "click>=8,<9",
    "mcp>=1.27,<2",
    "typer>=0.12,<1",
]

[project.optional-dependencies]
backend-code-pruner-mlx = [
    "mlx",
    "mlx-lm",
    "numpy",
    "huggingface-hub",
    "transformers",
]

[project.scripts]
needle = "needle.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["needle*"]

[tool.setuptools.package-data]
needle = [
    "registry_data/**/*.yaml",
    "registry_data/**/*.json",
    "registry_data/**/*.md",
    "hosts/pi/*.js",
    "hosts/pi/*.mjs",
    "hosts/pi/*.json",
    "hosts/pi/*.md",
    "hosts/mcp/*.md",
]
