[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

# uv-native provisioning. The public `needle` control plane stays lightweight
# enough to install without MLX; the built-in pruning runtime uses this optional
# extra for local model execution.
[project]
name = "needle"
version = "0.1.0"
description = "Local context-pruning for agent coding tools."
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "click>=8,<9",
    "mcp>=1.27,<2",
    "typer>=0.12,<1",
]

[project.optional-dependencies]
backend-code-pruner-mlx = [
    "mlx>=0.31,<0.32",
    "mlx-lm>=0.31,<0.32",
    "numpy>=2.4,<3",
    "huggingface-hub>=1,<2",
    "transformers>=5,<6",
]

[project.scripts]
needle = "needle.cli:main"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["needle*"]

[tool.setuptools.package-data]
needle = [
    "hosts/mcp/*.md",
]
